Changes Nav Section

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+@font-face {
+  font-family: 'Planta';
+  src: local('Planta'), url(./Fonts/Plantagenet_Cherokee.woff) format('woff');
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Planta !important;
+   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
