--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,4 +1,125 @@
-.home
-{
-    background-color: red;
+.home{
+    .section1,.section2,.section3,.section4,.landingpage{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .image{
+        width: 100%;
+    }
+
+    p{
+        margin-bottom: 0px;
+        font-size: 18px;
+    }
+
+    .title{
+        font-size: 22px;
+    }
+
+    .landingpage{
+        display: flex;
+        img{
+            width: 100%;
+        }
+        .landingpage-left{
+            width: 60%;
+        }
+        .landingpage-right{
+            width: 40%;
+            .accordion{
+
+                .accordion-button::after{
+                    background-image: unset;
+                }
+                button{
+                    background: transparent;
+                    box-shadow: none;
+                    color: black;
+                    width: 120px;
+                }
+                li{
+                    list-style: none;
+                }
+                .list{
+                    text-decoration: inherit;
+                    color: black;
+                }
+            }
+        }
+    }
+
+    .section1{
+        display: flex;
+        padding: 0px 94px;
+        .contentsec1{
+            display: flex;
+            .sec1-left{
+                width: 50%;
+                margin-right: 20px;
+            }
+            .sec1-right{
+                width: 50%;
+                margin-left: 20px;
+            }
+        }   
+    }
+    
+    .section2{
+        display: flex;
+        padding: 0px 94px;
+        .contentsec2{
+            display: flex;
+            .sec2-left{
+                width: 50%;
+                margin-right: 20px;
+            }
+            .sec2-right{
+                width: 50%;
+                margin-left: 20px;
+            }
+        }
+    }
+
+    .section3{
+        display: flex;
+        padding: 0px 94px;
+        .contentsec3{
+            display: flex;
+            .sec3-left{
+                width: 50%;
+                margin-right: 20px;
+            }
+            .sec3-right{
+                width: 50%;
+                margin-left: 20px;
+            }
+        }
+    }
+
+    .section4{
+        .sec4-left{
+            text-align: center;
+        }
+        .sec4-right{
+            text-align: center;
+        }
+    }
+
+    .section5{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        .contact{
+            text-align: center;
+            font-size: 22px;
+            margin-bottom: 30px;
+        }
+        .content{
+            font-size: 18px;
+            width: 45rem;
+            display: flex;
+            justify-content: space-between;
+        }       
+    }
 }
