--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -1,3 +1,4 @@
+
 .Nav-Header{
     position: fixed;
     padding-top: 44px;
@@ -5,6 +6,14 @@
     width: 100%;
     z-index: 1056;
     .Nav-Container{
+        display: flex;
+        position: relative;
+        justify-content: space-between;
+        height: 100px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 92px;
+        background-color:transparent;
         .Nav-Logo{
             display: flex;
             align-items: center;
@@ -23,14 +32,7 @@
                 height: 100%;
             }
         }
-        display: flex;
-        position: relative;
-        justify-content: space-between;
-        height: 100px;
-        width: 100%;
-        margin: 0 auto;
-        padding: 0 44px;
-        background-color:transparent;
+        
         .Nav-Hamburger{
             display: flex;
             flex-direction: column;
@@ -88,10 +90,33 @@
                     .Left-Section{
                         display: flex;
                         flex-direction: column;
+                        width: 325px;
+                        .accordion-item{
+                            border: none;
+                            .header-accordion{
+                                button{
+                                    background-color: #0E4F79;
+                                }
+                                button:after{
+                                    display: none;
+                                }
+                            }
+                            .accordion-body{
+                                background-color: #0E4F79;
+                                border: none;
+                            }
+                        }
+                        
+                        
                         .Left-Section-Tools{
                             display: flex;
+                            background-color: transparent;
+                            border: none;
+                            box-shadow: none;
+                            align-items: center;
                             p{
-                                font-size: 24px;
+                                font-family: Helvetica;
+                                font-size: 14px;
                                 margin: unset;
                                 letter-spacing: 10px;
                             }
@@ -105,20 +130,20 @@
                                     height: 2px;
                                     background-color: white;
                                     border-radius: 5px;
-                                    transition: 0.6s;
                                     margin: 0px;
                                 }
                                 .Plus2{
-                                    transform: rotate(90deg);
+                                    transform: rotate(0deg);
                                     width: 15px;
                                     height: 2px;
                                     background-color: white;
                                     border-radius: 5px;
-                                    transition: 0.6s;
+                                    transition: 0.8s;
                                 }
+                                
                                 .Plus2.actived{
-                                    transform: rotate(0deg);
-                                    height: 0px;
+                                    transform: rotate(90deg);
+                                    height: 2px;
                                     position: absolute;
                                     margin: 0px;
                                 }
@@ -127,13 +152,40 @@
                         }
 
                         .Menu-Content{
-                            padding-top: 10px;
                             p{
-                                font-size: 24px;
-                                padding-left: 25px;
+                                padding-top: 20px;
+                                font-family: Helvetica;
+                                font-weight: 400;
+                                font-size: 14px;
+                                padding-left: 45px;
+                                letter-spacing: 7px;
                             }
                         }
+                        .Menu-Content.collapsing {
+                            -webkit-transition-delay: 0.6s;
+                            transition-delay: 0.8s;
+                            transition: height 0.8s ;
+                          }
                         
+                        
+                    }
+                    .Middle-Section{
+                        padding-top: 5px;
+                        .Title-Section{
+                            p{
+                                margin: 0px;
+                                font-family: Helvetica;
+                                font-size: 14px;
+                                letter-spacing: 7px;
+                                font-weight: 300;
+                            }
+                        }
+                        .Social-Logo-Section{
+                            padding-top: 19px;
+                            img{
+                                padding-right: 19px;
+                            }
+                        }
                     }
                     .Right-Section{
                         p{
@@ -141,6 +193,17 @@
                             font-size: 32px;
                         }
                     }
+                }
+            }
+            .modal-footer{
+                justify-content: space-between;
+                border-top: none;
+                padding: 0px 120px 64px 120px;
+                p{
+                    font-size: 14px;
+                    font-family: Helvetica;
+                    font-weight: 300;
+                    letter-spacing: 7px;
                 }
             }
         }
