--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -30,7 +30,7 @@
             width: 40%;
             padding-left: 238px;
             padding-top: 106px;
-            .Left-Section-Tools{
+            .Right-Section-Tools{
                 display: flex;
                 background-color: transparent;
                 border: none;
