--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -1,3 +1,21 @@
+.Show-up{
+    animation-name: opacity-on;
+    animation-duration: 1s;
+}
+.Show-up.show-down{
+    animation-duration: opacity-off;
+    animation-duration: 1s;
+}
+
+@keyframes opacity-on {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes opacity-off {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
+
 
 .Nav-Header{
     position: fixed;
@@ -74,8 +92,8 @@
     .modal-dialog{
         max-width: none !important;
         margin: unset !important;
+        transition: 0.6s linear 0.4s;
         .modal-content{
-            mix-blend-mode: difference;
             background-clip: unset;
             border: none;
             border-radius: unset;
@@ -207,6 +225,66 @@
                 }
             }
         }
+    }
+    @media only screen and (min-device-width: 375px) and (max-device-height: 667px){
+
+    }
+
+    @media only screen and (min-device-width: 375px) and (max-device-height: 812px) {
+        .Nav-Header{
+            width: 65%;
+            .Nav-Container{
+                margin: 0px;
+                padding-right: 45px;
+                justify-content: flex-end;
+                .Nav-Logo{
+                    display: none;
+                }
+            }
+        }
+        .modal{
+            width: 100vw !important;
+            height: 85vh !important;
+            .modal-dialog{
+                .modal-content{
+                    height: 85vh;
+                    .modal-body{
+                        .Nav-Container{
+                            padding: 150px 0px 0px 0px;
+                            .Left-Section{
+                                .Menu-Content{
+                                    p{
+                                        padding-top: 10px;
+                                        padding-left: 24px;
+                                        letter-spacing: 3px;
+                                    }
+                                }
+                            }
+                            .Middle-Section{
+                                display: none;                        
+                            }
+                            .Right-Section{
+                                img{
+                                    height: 125px;
+                                }
+                                p{
+                                    letter-spacing: 0px;
+                                    font-size: 25px;
+                                }
+                            }
+                        }
+                    }
+                    .modal-footer{
+                        justify-content: center;
+                        padding: 0px 50px 50px 50px;
+                        p{
+                            letter-spacing: 2px;
+                        }
+                    }
+                }
+            }
+        }
+        
     }
 
 
