--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar{
+  background: transparent;
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background: transparent;
+  transition: 0.2s;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: lightgray;
+  border-radius: 20px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
