--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,6 +1,6 @@
 .home{
     padding-top: 212px;
-    .section1,.section2,.section3,.section4,.landingpage{
+    .section1,.section2,.section3,.section4,.section5,.landingpage{
         width: 100%;
         height: 100vh;
     }
@@ -159,7 +159,6 @@
     }
 
     .section5{
-        width: 100%;
         justify-content: center;
         display: flex;
         padding-top: 212px;
@@ -265,13 +264,14 @@
                 .contact{
                     margin-bottom: 0px;
                 }
-                padding: 0px 20px;
                 .content{
                     visibility: hidden;
+                    width: unset;
                 }
                 .contentmobile{
                     visibility: visible;
                     width: 100%;
+                    padding: 0px 20px;
                     flex-direction: column;
                     text-align: center;
                     line-height: 24px;
