--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,5 +1,6 @@
 .home{
     padding-top: 212px;
+    overflow: hidden;
     .section1,.section2,.section3,.section4,.section5,.landingpage{
         width: 100%;
         height: 100vh;
@@ -23,11 +24,13 @@
 
     .landingpage{
         display: flex;
-        img{
-            width: 100%;
-        }   
+        height: auto;
+        padding-bottom: 212px;
             .landingpage-left{
                 width: 60%;
+                .imgldpage{
+                    width: 100%;
+                }
             }
             .landingpage-right{
                 width: 40%;
@@ -97,6 +100,8 @@
     .section1{
         display: flex;
         padding: 0px 94px;
+        height: auto;
+        padding-bottom: 212px;
         .contentsec1{
             display: flex;
             .sec1-left{
@@ -114,6 +119,8 @@
     .section2{
         display: flex;
         padding: 0px 94px;
+        height: auto;
+        padding-bottom: 212px;
         .contentsec2{
             display: flex;
             .sec2-left{
@@ -131,6 +138,8 @@
     .section3{
         display: flex;
         padding: 0px 94px;
+        height: auto;
+        padding-bottom: 212px;
         .contentsec3{
             display: flex;
             .sec3-left{
@@ -146,7 +155,8 @@
     }
 
     .section4{
-        padding-top: 212px;
+        height: auto;
+        padding-bottom: 125px;
         .contentsec4{
             .sec4-left{
                 text-align: center;
@@ -160,7 +170,6 @@
     .section5{
         justify-content: center;
         display: flex;
-        padding-top: 125px;
         padding-bottom: 202px;
         letter-spacing: 7px;
         height: auto;
@@ -199,11 +208,13 @@
 
 @media only screen and (min-device-width: 375px) and (max-device-height: 812px) {
     .home{
-        .landingpage{
-            height: auto;
+        .landingpage{     
                 .landingpage-left{
                     width: 70%;
-                    margin-bottom: 212px;
+                    overflow: hidden;
+                    .imgldpage{
+                        width: auto;
+                    }
                 }
                 .landingpage-right{
                     padding-left: unset;
@@ -211,9 +222,8 @@
                 }    
         }
         .section1{
-            padding: unset;
-            height: auto;
-            margin-bottom: 60px;
+            padding: unset;      
+            padding-bottom: 60px;
             .contentsec1{
                 padding: 0px 20px;
                 flex-direction: column;
@@ -230,9 +240,8 @@
             }
         }
         .section2{
-            padding: unset;
-            height: auto;
-            margin-bottom: 60px;
+            padding: unset;        
+            padding-bottom: 60px;
             .contentsec2{
                 padding: 0px 20px;
                 flex-direction: column-reverse;
@@ -249,8 +258,7 @@
             }
         }
         .section3{
-            padding: unset;
-            height: auto;
+            padding: unset;       
             .contentsec3{
                 padding: 0px 20px;
                 flex-direction: column;
@@ -266,10 +274,9 @@
                 }
             }
         }
-        .section4{
-            height: auto;
+        .section4{      
             padding-top: unset;
-            margin-top: 98px;
+            padding-top: 98px;
             .contentsec4{
                 padding: 0px 20px;
                 display: flex;
@@ -279,12 +286,9 @@
                 }
             }
         }
-        .section5{
-            padding-top: unset;
-            margin-top: 98px;
-            padding-bottom: unset;
-            margin-bottom: 98px;
-            height: auto;
+        .section5{        
+            padding-top: 98px;
+            padding-bottom: 98px;
             .contentsec5{
                 .contact{
                     margin-bottom: 20px;
@@ -304,7 +308,7 @@
                         align-items: center;
                     }
                     p{
-                        font-size: 14px;
+                        font-size: 16px;
                     }
                 }
             }
