--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -205,7 +205,7 @@
                 }
                 .landingpage-right{
                     padding-left: unset;
-                    visibility: hidden;
+                    display: none;
                 }    
         }
         .section1{
