--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -121,6 +121,7 @@
         .Footer-Wraper{
             .Footer-Content-Wraper{
                 padding: 150px 16px 0px 16px;
+                height: 70vh;
                 .Footer-Left-Section{
                     .Menu-Content{
                         padding-top: unset;
