--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -276,6 +276,7 @@
                 .modal-content{
                     height: 100vh;
                     .modal-body{
+                        max-height: 76vh;
                         .Nav-Container{
                             padding: 180px 0px 0px 0px;
                             .Left-Section{
