--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -94,7 +94,7 @@
     mix-blend-mode: normal;
 }
 .modal-backdrop{
-    background: transparent;
+    background-color: transparent !important;
 }
     .modal-dialog{
         max-width: none !important;
