--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -206,7 +206,7 @@
     }
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) {
+@media (max-device-width: 768px) {
     .home{
         .title{
             p{
