--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -116,7 +116,7 @@
     }
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     .Footer-Container{
         .Footer-Wraper{
             .Footer-Content-Wraper{
