--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -233,7 +233,7 @@
         }
     }
 
-    @media (max-device-width: 768px){
+    @media (max-width: 768px){
         .Nav-Header{
             .Nav-Container{
                 padding: 0px 20px;
