--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -65,6 +65,7 @@
                         font-size: 14px;
                         padding-left: 45px;
                         color: white;
+                        cursor: pointer;
                     }
                 }
                 .Menu-Content.collapsing {
