--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -85,6 +85,7 @@
                     font-weight: 400;
                     font-size: 18px;
                     padding-left: 45px;
+                    cursor: pointer;
                 }
             }
             .Menu-Content.collapsing {
