--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -183,6 +183,7 @@
                                 font-weight: 400;
                                 font-size: 14px;
                                 padding-left: 45px;
+                                cursor: pointer;
                             }
                         }
                         .Menu-Content.collapsing {
