fix menu hide transition

--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -2,8 +2,8 @@
     animation-name: opacity-on;
     animation-duration: 0.8s;
 }
-.Show-up.show-down{
-    animation-duration: opacity-off;
+.Show-down{
+    animation-name: opacity-off;
     animation-duration: 0.8s;
 }
 
