--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -14,11 +14,13 @@
         font-size: 18px;
     }
 
-    .title{
-        p{
+    .title{    
             font-size: 22px;
             letter-spacing: 7px;
-        }    
+    }
+
+    .parallax{
+        width: 80%;
     }
 
     .react-parallax-bgimage{
@@ -109,6 +111,8 @@
             .sec1-left{
                 width: 50%;
                 padding-right: 20px;
+                display: flex;
+                justify-content: center;
             }
             .sec1-right{
                 display: flex;
@@ -134,6 +138,8 @@
             .sec2-right{
                 width: 50%;
                 padding-left: 20px;
+                display: flex;
+                justify-content: center;
             }
         }
     }
@@ -147,6 +153,11 @@
             .sec3-left{
                 width: 50%;
                 padding-right: 20px;
+                display: flex;
+                justify-content: center;
+                .parallax3{
+                    width: 100%;
+                }
             }
             .sec3-right{
                 width: 50%;
