--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -37,7 +37,7 @@
             .Nav-Title{
                 mix-blend-mode: difference;
                 margin-left: 17px;
-                font-size: 32px;
+                font-size: 26px;
                 margin-bottom: 0;
                 letter-spacing: 6px;
                 color: #3C3C3B;
@@ -48,6 +48,11 @@
             }
             .Logo{
                 height: 100%;
+            }
+            .Logo2{
+                transition: 1s;
+                height: 80%;
+                margin: 10px;
             }
         }
         
@@ -107,7 +112,7 @@
             color: white;
             .modal-body{
                 .Nav-Container{
-                    padding: 260px 137px 0px 120px;
+                    padding: 235px 137px 0px 120px;
                     display: flex;
                     justify-content: space-between;
                     .Left-Section{
@@ -141,7 +146,7 @@
                                 cursor: pointer;
                                 pointer-events: all;
                                 font-family: Helvetica;
-                                font-size: 14px;
+                                font-size: 16px;
                                 margin: unset;
                                 letter-spacing: 7px;
                             }
@@ -181,7 +186,7 @@
                                 padding-top: 20px;
                                 font-family: Helvetica;
                                 font-weight: 400;
-                                font-size: 14px;
+                                font-size: 16px;
                                 padding-left: 45px;
                                 cursor: pointer;
                             }
@@ -200,7 +205,7 @@
                             p{
                                 margin: 0px;
                                 font-family: Helvetica;
-                                font-size: 14px;
+                                font-size: 16px;
                                 letter-spacing: 7px;
                                 font-weight: 300;
                             }
@@ -242,6 +247,9 @@
                     width: 210px;
                     .Logo{
                         height: 80%;
+                    }
+                    .Logo2{
+                        height: 60%;
                     }
                     .Nav-Title{
                         mix-blend-mode: difference;
