nav fixing and instagram link on nav and footer

--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -91,6 +91,9 @@
                 position: absolute;
             }
         }
+        .Nav-Hamburger.actived{
+            display: none;
+        }
     }
 }
 .Nav-Header.actived{
