new Logo, font, and adding linktree

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,21 @@
 @font-face {
   font-family: 'Planta';
   src: local('Planta'), url(./Fonts/Plantagenet_Cherokee.woff) format('woff');
+
 }
+@font-face{
+  
+  font-family: 'Roboto';
+  src: local('Roboto'), url(./Fonts/Roboto-Medium.ttf) format('truetype');
+}
+@font-face{
+  
+
+  font-family: 'RobotoLight';
+  src: local('RobotoLight'), url(./Fonts/Roboto-Light.ttf) format('truetype');
+}
+
+
 body {
   margin: 0;
   font-family: Planta !important;
